updates site to a one page application

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Nunito:wght@200&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -110,4 +110,16 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+.bg-down {
+  background-position-y: 100px;
+}
+
+.h-120vh{
+  height: 120vh;
+}
+
+.h-60vh{
+  height: 60vh;
 }
