--- a/styles/globals.css
+++ b/styles/globals.css
@@ -156,4 +156,17 @@ a {
   height: 160vh;
 }
 
+.animate {
+  opacity: 0;
+  transition: all 1s;
+  filter: blur(5px);
+  transform: translateX(-10%);
+}
+
+.show {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
+}
+
 
