Added new hobbies section

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -120,52 +120,52 @@ a {
 
 /* Projects */
 @media (max-width: 768px) {
-  .projects-height-custom{
+  .projects-size-custom{
     height: 2000px;
   }
 }
 @media (min-width: 768px) and (max-width: 1024px) {
-  .projects-height-custom{
+  .projects-size-custom{
     height: 1000px;
   }  
 }
 
 @media (min-width: 1024px) and (max-width: 1280px) {
-  .projects-height-custom{
+  .projects-size-custom{
     height: 100px;
   } 
 }
 
 @media (min-width: 1280px) {
-  .projects-height-custom{
+  .projects-size-custom{
     height: 1600px;
   }  
 }
 
 /* Skills */
 @media (max-width: 768px) {
-  .skills-height-custom{
+  .skills-size-custom{
     margin-top: -12px;
     height: 1600px;
   }
 }
 
 @media (min-width: 768px) and (max-width: 1600px) {
-  .skills-height-custom{
+  .skills-size-custom{
     margin-top: -150px;
     height: 650px;
   }
 }
 
 @media (min-width: 1600px) and (max-width: 2200px)  {
-  .skills-height-custom{
+  .skills-size-custom{
     margin-top: -150px;
     height: 800px;
   }
 }
 
 @media (min-width: 2200px)  {
-  .skills-height-custom{
+  .skills-size-custom{
     margin-top: -150px;
     height: 1000px;
   }
@@ -174,50 +174,72 @@ a {
 
 /* About */
 @media (max-width: 640px) {
-  .about-height-custom{
+  .about-size-custom{
     margin-top: -100px;
     height: 2000px;
   }
 }
 
 @media (min-width: 640px) and (max-width: 768px) {
-  .about-height-custom{
+  .about-size-custom{
     margin-top: -100px;
     height: 1200px;
   }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
-  .about-height-custom{
+  .about-size-custom{
     margin-top: -100px;
     height: 1000px;
   }
 }
 
 @media (min-width: 1024px) {
-  .about-height-custom{
+  .about-size-custom{
     margin-top: -100px;
     height: 1200px;
   }
 }
 
-/* Contact */
+/* Hobbies */
 @media (max-width: 640px) {
-  .contact-height-custom{
+  .hobbies-size-custom{
     margin-top: -120px;
     height: 800px;
   }
 }
 
   @media (min-width: 640px) and (max-width: 768px) {
-  .contact-height-custom{
+  .hobbies-size-custom{
     margin-top: -36px;
     height: 650px;
   }
 }
 
 @media (min-width: 768px) {
-  .contact-height-custom{
+  .hobbies-size-custom{
+    margin-top: -12px;
+    height: 400px;
+  }
+}
+
+/* Contact */
+@media (max-width: 640px) {
+  .contact-size-custom{
+    margin-top: -120px;
+    height: 800px;
+  }
+}
+
+  @media (min-width: 640px) and (max-width: 768px) {
+  .contact-size-custom{
+    margin-top: -36px;
+    height: 650px;
+  }
+}
+
+@media (min-width: 768px) {
+  .contact-size-custom{
     margin-top: -12px;
     height: 400px;
   }
