--- a/styles/globals.css
+++ b/styles/globals.css
@@ -106,6 +106,12 @@ a {
   text-decoration: none;
 }
 
+.anchor {
+  display: block;
+  position: relative;
+  visibility: hidden;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
